# mcp-employee-bookstore-agent

./: .env  Dockerfile  Dockerfile.api  Dockerfile.mcp  README.md  agent.ipynb  docker-compose.yml  main.py  mcp_server.py  n8n.json  pyproject.toml
agents/: agent.py
data/: employees.py
database/: database.py
