[project]
name = "mcp-server-n8n"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "langchain>=1.2.17",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.13.3",
    "uvicorn>=0.46.0",
]
